; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/c67x00/extr_c67x00-hcd.c_c67x00_hub_reset_host_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/c67x00/extr_c67x00-hcd.c_c67x00_hub_reset_host_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c67x00_sie = type { i32, %struct.c67x00_hcd* }
%struct.c67x00_hcd = type { i32 }

@DEFAULT_EOT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.c67x00_sie*, i32)* @c67x00_hub_reset_host_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @c67x00_hub_reset_host_port(%struct.c67x00_sie* %0, i32 %1) #0 {
  %3 = alloca %struct.c67x00_sie*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.c67x00_hcd*, align 8
  %6 = alloca i64, align 8
  store %struct.c67x00_sie* %0, %struct.c67x00_sie** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.c67x00_sie*, %struct.c67x00_sie** %3, align 8
  %8 = getelementptr inbounds %struct.c67x00_sie, %struct.c67x00_sie* %7, i32 0, i32 1
  %9 = load %struct.c67x00_hcd*, %struct.c67x00_hcd** %8, align 8
  store %struct.c67x00_hcd* %9, %struct.c67x00_hcd** %5, align 8
  %10 = load %struct.c67x00_sie*, %struct.c67x00_sie** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @c67x00_ll_husb_reset(%struct.c67x00_sie* %10, i32 %11)
  %13 = load %struct.c67x00_hcd*, %struct.c67x00_hcd** %5, align 8
  %14 = getelementptr inbounds %struct.c67x00_hcd, %struct.c67x00_hcd* %13, i32 0, i32 0
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @spin_lock_irqsave(i32* %14, i64 %15)
  %17 = load %struct.c67x00_sie*, %struct.c67x00_sie** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @c67x00_ll_husb_reset_port(%struct.c67x00_sie* %17, i32 %18)
  %20 = load %struct.c67x00_hcd*, %struct.c67x00_hcd** %5, align 8
  %21 = getelementptr inbounds %struct.c67x00_hcd, %struct.c67x00_hcd* %20, i32 0, i32 0
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @spin_unlock_irqrestore(i32* %21, i64 %22)
  %24 = load %struct.c67x00_sie*, %struct.c67x00_sie** %3, align 8
  %25 = getelementptr inbounds %struct.c67x00_sie, %struct.c67x00_sie* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load i32, i32* @DEFAULT_EOT, align 4
  %28 = call i32 @c67x00_ll_set_husb_eot(i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @c67x00_ll_husb_reset(%struct.c67x00_sie*, i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @c67x00_ll_husb_reset_port(%struct.c67x00_sie*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @c67x00_ll_set_husb_eot(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
